corregit connectionstring